bag with _mobile visibility class fixed

--- a/src/scss/common/common.scss
+++ b/src/scss/common/common.scss
@@ -101,7 +101,7 @@ main {
 }
 
 ._mobile {
-  display: none;
+  display: none !important;
 }
 
 ._underlined {
